add watchlist and work on crypto theses

--- a/philosophy/messari-2022-crypto-theses.tex
+++ b/philosophy/messari-2022-crypto-theses.tex
@@ -417,14 +417,62 @@ Prediction: the most popular L1 <> L2 / L1 <> L1 / L2 <> L2 bridge protocols wil
 Time will tell if the markets are overheated in the short-term, but we’re just getting started in the crypto supercycle.
 
 \part{The DAO of DAOs}
+Whereas most technologies tend to automate workers on the periphery doing menial tasks, blockchains automate away the center. Instead of putting the taxi driver out of a job, blockchain puts Uber out of a job and lets the taxi drivers work with the customer directly.
 
+DAOs are one of the most important constructs in crypto, and they will change every aspect of the economy, politics, and probably even your social life in the years ahead. If 2020 was all about DeFi, and 2021 was all about NFTs, 2022 will be the year of the DAO.
 
+\section{Enabling Tools: Wallets and Staking}
+Past 18 months was a necessary precursor and infrastructure building phase for DAOs to work: (1) manage and swap tokens peer-to-peer (DeFi), (2) build and share personal identity (NFTs), navigate frictionlessly across communities (L1-L2 bridges)
 
+Backbone of Web3 economy are personal wallets that transform into 'data vaults'--Metamask/Coinbase on Eth, Phantom, TerraStation, etc. Will become more and more important in years to come. 
 
+\section{Down the Rabbithole: Learning and Earning}
+Rabbithole offers quests that help users test new products and earn token treasury rewards. Even if the mega-airdrops are unsustainable in size, they’re likely in their infancy in practice. DAOs have money...lots of it, and want users. Recommend: spend spring semester testing different crypto protocols on Earn, Rabbithole. 
+https://learn.zapper.fi/articles/how-to-claim-your-xp-and-nfts-on-zapper
 
+Learn to earn is going to replace credentials and gamify and invert education funding model. 
 
+\section{Working in Web3}
+\begin{itemize}
+    \item https://web3.smsunarto.com/
+    \item General analogy to how to get started in DAO work: https://twitter.com/petergyang/status/1447605297808232448?t=f7XHnO8pNokvVM7XhKV-Kw\&s=19
+\end{itemize}
 
+\section{Hierarchies, Pods, and Fluid Organisms}
+Seemingly having benevolent dictators is helpful, but isn't decentralized. In short, we're so early in this experiment. 
 
+\section{DAO Treasury Management}
+Still mostly hold their own native tokens are not very diversified, can unwind sharply during bear markets. A potential disaster in the making. 
+
+\section{DAO Investor Relations}
+\begin{itemize}
+    \item Token Terminal: fundamental data
+    \item The Graph: on-chain data
+    \item Nansen: funds flows
+    \item Dune Analytics: aggregated metrics
+    \item DeFiLlama: TVL
+    \item Messari: market data and off-chain events
+\end{itemize}
+
+\section{The New Capital Allocators}
+\begin{itemize}
+    \item Venture DAOs: only constraint will be regulations
+    \item Curation DAOs: create incentives to crowdsource quality for a mission-aligned community
+        \begin{itemize}
+            \item https://decrypt.co/84755/pubdao-media-dao-decentralized-news-wire
+            \item https://twitter.com/AnalystDao
+            \item https://mirror.xyz/0x3138165f8d21d4869dbD406CD8bc8055CAC8fb6E/cQtRNHKaXr2OnX0X3QNsDGSusykYkw9D5XwY1PHvvZ4
+        \end{itemize}
+\end{itemize}
+
+\part{General Advice}
+\begin{itemize}
+    \item No scared cows: You're here to make money not winning a purity contest. 
+    \item Must be open-minded, but stick to your guns when you've got all the information you need
+    \item Don't follow your passion: make it a hobby and instead find the hottest, most vibrant part of the ecnonomy and find how to contribute to it
+    \item Make stuff: https://twitter.com/zuhayeer/status/1449079602580652035?s=20
+    \item Overthinking: write; underthinking: read
+\end{itemize}
 
 
 
