add messari downloader

--- a/philosophy/crypto-theses.tex
+++ b/philosophy/crypto-theses.tex
@@ -14,23 +14,75 @@
 
 \tableofcontents
 
-\part{About}
 
-\section{Parts explanation}
+\part{Metaverse}
+
+\section{Fan Tokens}
+
+\section{Play to earn}
+
+\section{Composable NFTs}
+
+\section{NFT Financialization}
+
+\section{Namespaces and Data sharing}
+
+\part{Physically decentralized web}
+
+\section{Physical network scaling}
 \begin{itemize}
-    \item Fact-supported theses: these are my high conviction beliefs. Ordered in highest conviction to lowest
-    \item Working theses: Facts on ground seeminly is indecisive. Will take a side when facts crystallize
-    \item \href{run:../analysis/213-1c.pdf}{watchlist}
-
+    \item Helium: very strong performer which bootstrapped hard hardware business model with right user economics
+    \item Livepeer: decentralized video transcoding protocol gains traction due to rapidly growing video network
+    \item Akash: stores docker containers at significatly reduced cost to cloud providers
+    \item Andrena/Althea (pre-tokens) tackling internet service provider layer by enabling communities to set up hotspots and antennas that bring internet access to nearby towns
 \end{itemize}
 
-\section{Theses components}
+\section{Decentralized storage}
 \begin{itemize}
-    \item Assumptions
-    \item Compounding items
+    \item IPFS: decentralized system that allows any node to store data for a limited time
+    \item Filecoin: incentivized storage network built on IPFS
+    \item Arweave: long-term storage with own blockchain
+    \item Sia: on-demand storage with own blockchain.
+    \item Filebase/Pinata: decentralized storage aggregators
 \end{itemize}
 
-\part{Fact-supported theses}
+\part{DeFi 2.0}
+\section{Algorithmic stablecoin}
+
+
+\section{Emerging Protocol liquidity spectrum}
+\begin{itemize}
+    \item Olympus DAO
+    \item Fei x Ondo Finance
+    \item Tokemak
+\end{itemize}
+
+
+\section{Tokenized Funds}
+\begin{itemize}
+    \item Bankless \$BED and \$GMI
+\end{itemize}
+
+
+\section{Security and insurrance}
+\begin{itemize}
+    \item Smart contract insurance (Nexus--first crypto insurance unicorn, and definitely not last)
+    \item Verified secure smart contract libraries and security-as-a-service. (Forta)
+    \item Perpetuity on smart contract security researched. 
+\end{itemize}
+
+\part{ETH, Layers, Bridges}
+\section{Liquid Staking}
+\begin{itemize}
+    \item Lido
+    \item Anchor
+\end{itemize}
+
+\part{DAOs}
+\section{DAO investor relations}
+\begin{itemize}
+    \item The graph: oh-chain data
+\end{itemize}
 
 \section{Test}
 test \href{https://www.overleaf.com/learn/latex/Hyperlinks}{test}
@@ -38,7 +90,21 @@ test \href{https://www.overleaf.com/learn/latex/Hyperlinks}{test}
 \part{Working-theses}
 \section{test}
 test test \href{run:./messari-2022-crypto-theses.pdf}{test}
-
+\textbf{BentoBox} - A new base-layer for future financial applications
+that Sushi intends to offer. Simply described,
+{\href{https://messari.io/article/sushi-bentobox-kashi-the-first-piece?referrer=asset:sushiswap}{BentoBox}}
+is a vault that holds all assets deposited by users that can be utilized
+by applications built on top of it. BentoBox aims to strengthen Sushi to
+become the primary destination where users can interact with minimal gas
+and maximal capital efficiency. BentoBox can facilitate multiple
+transactions without having to execute multiple token approvals. Let's
+imagine the user approved BentoBox access to the wallet's tokens once
+and deposited them to the vault. The vault will allow those deposited
+tokens to be used across any BentoBox applications, without needing to
+approve the wallet's token access ever again. BentoBox optimizes for
+capital efficiency by implementing a yield-generating strategy to idle
+assets held in the vault. The strategy includes activities such as
+lending, low-risk yield farming, staking, and flash loans.
 
 
 
