bug fixes to mdl.py, downloaded a boatload of articles. did not sort

--- a/messari/sandbox.ipynb
+++ b/messari/sandbox.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "id": "e1abb5f1-01f5-4baf-aa99-071d233fa299",
    "metadata": {},
    "outputs": [],
@@ -602,8 +602,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8643315d-3962-4f57-8d52-027f08a9cdb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 'tes.t.t..t.jpg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7800dd9a-e85a-4c37-8ae4-e2e75270c30c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.jpg'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[a.rfind('.'):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f677050b-37fe-4368-9949-bd02de611155",
    "metadata": {},
    "outputs": [],
    "source": []
