--- a/ecosystem/defi/valuations.tex
+++ b/ecosystem/defi/valuations.tex
@@ -3,6 +3,16 @@
 \begin{document}
 \maketitle
 
+\section{\href{run:./understanding-defi-valuations.pdf}{Understanding DeFi valuations}}
+\begin{itemize}
+    \item DeFi tokens extract value at protocol value: can value as capital assets: can use traditional valuation methods: (1) Discounted Cash Flow, (2) Comparabale Company Analysis, (3) Comparable Transactions
+    \item \href{https://www.tokenterminal.com/}{evaluation tool}
+    \item Valuation mix of science and art: more of science for stable giants, more art for start-ups. 
+    \item Relative valuation for DeFi is useless given rapidly changing tokenomics and different sectors. Same for fundamental analysis (high uncertainty, fundamental analysis does not make sense in this context). 
+    \item Valuing DeFi tokens is an art: depends on subjective assessment of the future value of a token discounted to the present. Look at: product-market fit, team, community, token economics. 
+    \item Practice artistry: fundamental analysis at this stage is unreliable, same for relative valuation. 
+\end{itemize}
+
 \section{\href{run:./defi-metrics-that-matter-for-a-price-recovery--fundamental-analysis.pdf}{DeFi Metrics that Matter for a Price Recovery: Fundamental Analysis}}
 \begin{itemize}
     \item Fundamental analysis matters and there must be value accrual to protocol and investors, but price recovery can be more dependent to correlation to Bitcoin. Look at \# active users, trading volume, TVL, interest per year on lending protocols, amount deposited and oustanding loans for lending protocols
